# bkg-bittts-worker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TASKS.md  compose.yaml  get_clear.sh  get_home.sh  get_job.sh  get_on.sh  pyproject.toml  requirements-gpu.txt  worker-user-setup.sh
.cursor/rules/: local-workers-only.mdc
bkg_bittts_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docker/: entrypoint.sh
scripts/: release-check.sh
scripts/docker/: logs.sh  shell.sh  start.sh  status.sh  stop.sh
scripts/linux/: connect.sh  install.sh  start.sh  status.sh  stop.sh
scripts/win/: connect.ps1  install.ps1  lib.ps1  start.ps1  status.ps1  stop.ps1
tests/: test_bundle_force.py
worker/: bootstrap.py  client.py  launcher.py  main.py  metrics.py  paths.py
worker_patches/: sitecustomize.py
