[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bkg-bittts-worker"
version = "0.5.0"
description = "BKG BitTTS GPU worker client for train.eysho.info"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bkg-bittts-worker = "worker.launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
